# DAC24

./: README.md
IC3ref/: .gitignore  .gitmodules  IC3.cpp  Makefile  main.cpp
IC3ref-pl/: CMakeLists.txt  IC3.cpp  IC3.h  Model.cpp  Model.h
IC3ref-pl/minisat/: CMakeLists.txt
IC3ref/minisat/: Makefile
libs/aig-rs/: Cargo.toml  README.md
libs/aig-rs/src/: aiger.rs  cnf.rs  display.rs  lib.rs  logic_form.rs  others.rs  ternary.rs
libs/aiger-rs/: Cargo.toml  README.md
libs/aiger-rs/src/: lib.rs
libs/logic-form/: Cargo.toml  README.md
libs/logic-form/src/: lib.rs
libs/minisat-rs/: .clang-format  Cargo.toml  README.md  build.rs
libs/minisat-rs/bindings/: CMakeLists.txt  binding.cpp
libs/minisat-rs/src/: core.rs  lib.rs  simp.rs
ric3/: .gitignore  README.md
ric3-pl/: Cargo.toml
ric3-pl/src/: activity.rs  basic.rs  lib.rs  main.rs  mic.rs  model.rs  statistic.rs
ric3/src/: analysis.rs  command.rs  frames.rs  lib.rs  mic.rs  simulate.rs  solver.rs  statistic.rs  verify.rs
