[package]
name = "aig"
version = "0.1.0"
license = "MIT"
description = "Rust Aig library"
edition = "2021"
keywords = ["logic", "aig", "formal_method", "model_checking"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aiger = { package = "gipsyh-aiger", path = "../aiger-rs" }
logic-form = { version = "0.1.1", path = "../logic-form" }
