[package]
name = "logic-form"
version = "0.1.1"
license = "MIT"
description = "Rust library for representing Cube, Clause, CNF and DNF"
edition = "2021"
keywords = ["logic", "clause", "cube", "cnf", "dnf"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.183", features = ["derive"] }